Fixed input width on mobile and added space between checkboxes

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -5,3 +5,15 @@ div.spacedContainer {
 li.is-active {
 	font-weight: bold;
 }
+
+input[type="text"],
+input[type="date"],
+input[type="number"],
+input[type="email"] {
+	min-height: 2rem;
+	width: 100%;
+}
+
+.spaced-checkbox{
+	margin-right: 0.5rem; /* Give some spacing between each checkbox on add week form
+}
